--- a/snuev-ios/Base.lproj/Main.storyboard
+++ b/snuev-ios/Base.lproj/Main.storyboard
@@ -1,24 +1,116 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="mmC-cO-CxF">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--title-->
+        <scene sceneID="h1z-ea-CFu">
+            <objects>
+                <viewController id="dFa-4K-wSv" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="9V6-SW-fl6">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="41q-2q-FfD"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="title" id="emC-h6-VDv">
+                        <barButtonItem key="rightBarButtonItem" title="Item" id="nJN-lS-Lru">
+                            <connections>
+                                <segue destination="sT9-rx-RMV" kind="show" id="J7H-yk-YL7"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="D0F-j8-kQs" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-823" y="21"/>
+        </scene>
+        <!--second-->
+        <scene sceneID="DXK-bB-gqO">
+            <objects>
+                <viewController id="sT9-rx-RMV" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="5oE-Ts-ze2">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="td6-qF-1zc"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="second" id="dkM-8b-jY4"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cXv-JE-fnB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="137" y="-1"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="bFO-kv-99Q">
+            <objects>
+                <navigationController id="mmC-cO-CxF" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="zDs-iP-C5c">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="dFa-4K-wSv" kind="relationship" relationship="rootViewController" id="gYj-MY-CpK"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yIO-FV-9TI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1747" y="22"/>
+        </scene>
+        <!--Example View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ExampleViewController" customModule="snuev_ios" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="kdy-dV-hty">
+                                <rect key="frame" x="0.0" y="20" width="375" height="56"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Gba-Th-c7P">
+                                <rect key="frame" x="0.0" y="76" width="375" height="591"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="qT7-Xn-Muj">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="qT7-Xn-Muj" id="43n-in-mem">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Gba-Th-c7P" secondAttribute="trailing" id="BZy-Ye-ox6"/>
+                            <constraint firstItem="kdy-dV-hty" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Djn-0v-pSY"/>
+                            <constraint firstItem="kdy-dV-hty" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Gnm-i8-jaR"/>
+                            <constraint firstItem="Gba-Th-c7P" firstAttribute="top" secondItem="kdy-dV-hty" secondAttribute="bottom" id="Irp-WM-Gs7"/>
+                            <constraint firstItem="kdy-dV-hty" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="VmL-5a-WqQ"/>
+                            <constraint firstItem="Gba-Th-c7P" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="cPy-bc-uos"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Gba-Th-c7P" secondAttribute="bottom" id="wF0-mm-uO0"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="searchBar" destination="kdy-dV-hty" id="Y5b-xs-Wy2"/>
+                        <outlet property="tableView" destination="Gba-Th-c7P" id="UKp-Ot-PpO"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-1748" y="-812"/>
         </scene>
     </scenes>
 </document>
