--- a/snuev-ios/example/Example.storyboard
+++ b/snuev-ios/example/Example.storyboard
@@ -29,7 +29,7 @@
         <!--Example View Controller-->
         <scene sceneID="Ugb-wZ-gV5">
             <objects>
-                <viewController id="8Rk-o3-uHq" customClass="ExampleViewController" customModule="snuev_ios" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ExampleViewController" id="8Rk-o3-uHq" customClass="ExampleViewController" customModule="snuev_ios" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="6b4-SH-Rs5">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
